# sdn-project

./: .gitignore  LICENSE  README.md  Untitled.ipynb  commands.txt  create_virtual_interfaces.sh  model_output.json  pyJsonParser.py  requirements.txt  swtichtree.p4  train_model.py
genpacket/: Cargo.toml
genpacket/src/: attack-replay.rs  capture-device.rs  csv-pcap-match.rs  flow-split.rs  modifier.rs  push-pcap.rs  tester.rs  traffic-gen.rs
