[package]
name = "genpacket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "3.1.8", features = ["derive"] }
ctrlc = "3.2.1"
etherparse = "0.10.1"
indexmap = { version = "1.8.1", features = ["std"] }
pcap = "0.9.1"
pcap-file = "1.1.1"
thiserror = "1.0.30"

[[bin]]
name = "push-pcap"
path = "src/push-pcap.rs"

[[bin]]
name = "capture-device"
path = "src/capture-device.rs"

[[bin]]
name = "traffic-gen"
path = "src/traffic-gen.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"

[[bin]]
name = "flow-split"
path = "src/flow-split.rs"

[[bin]]
name = "modifier"
path = "src/modifier.rs"

[[bin]]
name = "cpm"
path = "src/csv-pcap-match.rs"

[[bin]]
name = "attack-replay"
path = "src/attack-replay.rs"
